Basic Start to UI.

--- a/apps/nx-flash-cards/src/app/app.component.html
+++ b/apps/nx-flash-cards/src/app/app.component.html
@@ -1,7 +1,2 @@
-<div style="text-align: center;">
-  <h1>Welcome to nx-flash-cards!</h1>
-  <img
-    width="450"
-    src="https://raw.githubusercontent.com/nrwl/nx/master/images/nx-logo.png"
-  />
-</div>
+<flash-cards-game-top-menu-bar></flash-cards-game-top-menu-bar>
+<flash-cards-game-carousel></flash-cards-game-carousel>
