UI Changes/Additions

--- a/apps/nx-flash-cards/src/app/app.component.html
+++ b/apps/nx-flash-cards/src/app/app.component.html
@@ -1,2 +1,3 @@
 <flash-cards-game-top-menu-bar></flash-cards-game-top-menu-bar>
 <flash-cards-game-carousel></flash-cards-game-carousel>
+<flash-cards-game-flashcards-create></flash-cards-game-flashcards-create>
